
- Removed AMD_Array_Object_ice_invoke class and instead added an
  ice_response method to AMD_Object_ice_invoke that uses the array
  type.

- The system logger (enabled when Ice.UseSyslog is set) now uses the 
  value of Ice.ProgramName as the log identifier prefix.

- Fixed crash if Application::main() or Service::main() were called 
  with argc == 0.


Java Changes
============

- Fixed a bug where an outgoing SSL connection was allowed even though
  certificate validation failed.

- A holder class generated for a Slice class or interface now extends
  the generic base class Ice.ObjectHolderBase and implements the
  streaming interface Ice.ReadObjectCallback.

- slice2java no longer generates a <name>OperationsNC interface for
  local interfaces and classes. This makes the code easier to browse
  with IDEs.

- slice2java now preserves javadoc comments that appear in the Slice
  source and writes them through to the corresponding APIs in the
  generated code.

- Ice.jar and Freeze.jar now include source files. This allows IDEs
  such as Eclipse to browse the Ice source code and to display javadoc
  comments.

- Fixed a bug that caused UnmarshalOutOfBoundsException during an
  attempt to unmarshal an exception or class if Ice.jar is installed
  in the JVM's extension directory.

- The following APIs are deprecated and will be removed in a future 
  release.

  Object::ice_hash()
  ObjectPrx::ice_getHash()

- The StackSize thread pool configuration property is now used.

- The generated classes for Slice structs are no longer declared final.

- Ice.Util.generateUUID has been deprecated. Use
  java.util.UUID.randomUUID().toString() instead.

- Ice now supports the ability to load a configuration file as a class
  path resource. For a path name specified in the ICE_CONFIG
  environment variable, in the --Ice.Config command-line option, or
  passed to Properties::load(), Ice first attempts to open the file as